--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#F8F7FC</color>
+    <color name="colorOrangeLight">@android:color/holo_orange_light</color>
+    <color name="colorBlueLight">@android:color/holo_blue_light</color>
+    <color name="colorBlueBright">@android:color/holo_blue_bright</color>
+    <color name="colorBluePrimary">#4AB9E3</color>
+    <color name="colorPrimaryDark">#F8F7FC</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
