--- a/app/src/main/res/layout/cardview_store.xml
+++ b/app/src/main/res/layout/cardview_store.xml
@@ -1,31 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
     <androidx.cardview.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_view_store_res"
-        android:layout_width="wrap_content"
+        android:layout_width="168dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        card_view:cardBackgroundColor="#ffeedd"
-        card_view:cardElevation="3dp"
         android:layout_margin="4dp"
+        card_view:cardBackgroundColor="#ffeedd"
+        card_view:cardCornerRadius="10dp"
+        card_view:cardElevation="3dp"
         card_view:cardUseCompatPadding="true"
         >
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/ivImage"
-                android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="2dp"
+            android:gravity="center_vertical">
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardImageStore"
+                android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/carrefour"/>
+                android:layout_marginLeft="30dp"
+                card_view:cardCornerRadius="15dp">
+
+                <ImageView
+                    android:id="@+id/ivImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
+                    android:src="@drawable/carrefour" />
+            </androidx.cardview.widget.CardView>
+
+
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
@@ -33,9 +47,10 @@
                 android:gravity="center"
                 android:text="TextView"
                 android:textSize="18sp"
-                android:textStyle="italic|bold"/>
+                android:layout_below="@+id/cardImageStore"
+                android:textStyle="italic|bold" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 </LinearLayout>
