--- a/app/src/main/res/layout/cardview_product.xml
+++ b/app/src/main/res/layout/cardview_product.xml
@@ -32,22 +32,23 @@
                 android:orientation="vertical"
                 android:layout_toRightOf="@id/productImageIV">
 
-            <TextView
-                android:id="@+id/productTitleTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="TextView"
-                android:textSize="18sp"
-                android:textStyle="bold" />
                 <TextView
                     android:id="@+id/productPublisherTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="publishedBy JohnDoe"
                     android:textSize="18sp"
                     android:textStyle="italic|bold" />
+            <TextView
+                android:id="@+id/productTitleTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_marginLeft="30dp"
+                android:text="TextView"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
                 <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -63,7 +64,7 @@
                         android:textSize="18sp"
                         android:textStyle="italic|bold" />
                 <TextView
-                    android:id="@+id/productDiscountPriceTV"
+                    android:id="@+id/productStockTV"
                     android:layout_width="133dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
